# openGL_triangle

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.EAA359BAF16C3B45.idx
src/: main.cpp
